contrast fixes

--- a/main/website/static/website/css/the-big-picture.css
+++ b/main/website/static/website/css/the-big-picture.css
@@ -3,23 +3,36 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-the-big-picture/blob/master/LICENSE)
  */
-body {
-  background: url('../img/background.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  text-align: left;
-  color: white;
-  margin-right: 10%;
-  margin-top: 10%;
+
+@media (max-width: 767px){
+
+    div.logo {
+        display:none !important;
+    }
 }
 
-.row {
-	display: relative !important;
+
+body {
+    background: url('../img/background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    text-align: left;
+    color: white;
 }
 
 
 .bg-dark {
     background-color: #292f33 !important;
 }
+
+
+
+.contrast {
+    margin-top: 70px;
+    padding: 50px 20px 30px 20px;
+    background-color: #292f339e;
+}
+
+
